[package]
name = "payload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [target.i686-pc-windows-msvc]
# rustflags = [
#   "-C", "target-feature=+crt-static",
# ]

[target.i686-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

# [build]
# build = "build.rs"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[dependencies]
libc = { version = "0.2.147"}
libc_alloc = "1.0.4"
# winapi = { version = "0.3.9", features = ["winuser"] }
